--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   },
 
   "dependencies": {
-    "express": "3.4.7"
+    "express": "3.4.7",
+    "socket.io": "latest",
+    "jade": "*"
   },
   "devDependencies": {},
   "bundleDependencies": [],
 
   "private": true,
-  "main": "source/app.js"
+  "main": "app.js"
 }
