--- a/package.json
+++ b/package.json
@@ -18,21 +18,26 @@
     "type": "git",
     "url": "https://github.com/openshift/origin-server"
   },
-
   "engines": {
     "node": ">= 0.10.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
     "express": "3.4.7",
     "socket.io": "latest",
     "jade": "*",
     "btc-e": "latest"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "mocha": "~1.21.4",
+    "grunt-mocha-test": "~0.12.0",
+    "grunt-contrib-concat": "~0.5.0"
+  },
   "bundleDependencies": [],
-
   "private": true,
   "main": "app.js"
 }
