Add table with orders. Add buy order func

--- a/.jshintrc
+++ b/.jshintrc
@@ -8,7 +8,8 @@
     "console": true, //debugg variables
     "require": true, "requirejs": true, "define": true, //requirejs variables
     "process": true, "module": true, "exports": true, "__dirname": true, //Node.js internal
-    "$": true //jQuery
+    "$": true,  //jQuery
+    "describe": true, "it": true //Mocha, Chai
   },
   "globalstrict": true,
   "quotmark": true,
