--- a/package.json
+++ b/package.json
@@ -26,7 +26,16 @@
     "express": "3.4.7",
     "socket.io": "latest",
     "jade": "*",
-    "btc-e": "latest"
+    "btc-e": "latest",
+    "moment": "latest"
+  },
+  "config": {
+    "blanket": {
+      "pattern": [
+        "buysellfn",
+        "public/javascripts"
+      ]
+    }
   },
   "devDependencies": {
     "grunt": "~0.4.5",
@@ -35,7 +44,23 @@
     "grunt-contrib-uglify": "~0.5.0",
     "mocha": "~1.21.4",
     "grunt-mocha-test": "~0.12.0",
-    "grunt-contrib-concat": "~0.5.0"
+    "grunt-contrib-concat": "~0.5.0",
+    "karma": "~0.12.23",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-mocha": "~0.1.9",
+    "requirejs": "~2.1.15",
+    "karma-requirejs": "~0.2.2",
+    "karma-chai-plugins": "~0.2.3",
+    "chai": "~1.9.1",
+    "jscoverage": "~0.5.6",
+    "blanket": "~1.1.6",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-copy": "~0.6.0",
+    "grunt-blanket": "0.0.8",
+    "grunt-todo": "~0.4.0",
+    "jshint-stylish": "~1.0.0",
+    "jshint-html-reporter": "~0.2.0",
+    "socket.io-client": "~1.1.0"
   },
   "bundleDependencies": [],
   "private": true,
