--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "grunt-todo": "~0.4.0",
     "jshint-stylish": "~1.0.0",
     "jshint-html-reporter": "~0.2.0",
-    "socket.io-client": "~1.1.0"
+    "socket.io-client": "~1.1.0",
+    "grunt-dropbox": "~0.1.3"
   },
   "bundleDependencies": [],
   "private": true,
