--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.0",
   "description": "OpenShift Sample Application",
   "keywords": [
-    "OpenShift",
+    "bot",
     "Node.js",
     "application",
-    "openshift"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+    "name": "Ihor Pavlenko",
+    "email": "ihor@pavlenko.guru",
+    "url": "http://www.pavlenko.guru"
   },
-  "homepage": "http://www.openshift.com/",
+  "homepage": "http://www.mycoins.pavlenko.ninja",
   "repository": {
     "type": "git",
     "url": "https://github.com/openshift/origin-server"
