--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "bot",
     "Node.js",
-    "application",
+    "application"
   ],
   "author": {
     "name": "Ihor Pavlenko",
@@ -45,12 +45,7 @@
     "mocha": "~1.21.4",
     "grunt-mocha-test": "~0.12.0",
     "grunt-contrib-concat": "~0.5.0",
-    "karma": "~0.12.23",
-    "karma-chrome-launcher": "~0.1.4",
-    "karma-mocha": "~0.1.9",
     "requirejs": "~2.1.15",
-    "karma-requirejs": "~0.2.2",
-    "karma-chai-plugins": "~0.2.3",
     "chai": "~1.9.1",
     "jscoverage": "~0.5.6",
     "blanket": "~1.1.6",
